2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Implement
	-[NSImage drawInRect:fromRect:operation:fraction:respectFlipped:hints:]

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (-nativeDrawInRect:...): Fix two bugs
	demonstrated in GSTest:
	- drawing an image in a flipped view with -drawInRect:... wasn't
	  working, and
	- drawing a vector rep in a dest rect larger than the point
	  size of the rep was resulting in blurry output.

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* configure.ac:
	* configure: Fix the ICU test so the library search path and
	flags are added to GRAPHIC_LFLAGS; this fixes the build on
	Windows

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSColorPanel.m: Remove code for generating a dynamic
	magnifying glass cursor; it flickers on X11.

2011-07-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSGuiPrivate.h: remove reference to obsolete preface.h

2011-07-14  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSOutlineView.m: Allow collapsing or expanding multiple
	rows at a time using the arrow keys

2011-07-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSound.m
	* Source/GSWindowDecorationView.m
	* Source/NSMatrix.m
	* Source/NSBitmapImageRep.m
	* Source/NSForm.m
	* Source/GSHorizontalTypesetter.m
	* Source/NSMovie.m
	* Source/NSFontDescriptor.m
	* Source/NSImage.m
	* Source/NSScrollView.m
	* Source/NSCell.m
	* Source/NSBrowserCell.m
	* Source/GSDragView.m
	* Source/NSDocument.m: Replace direct use of the isa pointer with
	a call to object_getClass().

2011-07-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSColorPanel.m: Make a magnifying glass cursor when using
	the magnifying glass color picker. back/x11 isn't displaying
	the cursor at the moment.

2011-07-13 German Arias <german@xelalug.org>

	* Resources/Spanish.lproj/Localizable.strings: More strings.
	* Source/GSCharacterPanel.m: Added missign internationalization.
